feat: Refactor JobSeekerController and JobSeekerService for improved job application handling and add note creation functionality